[project]
name = "mcp-fetch-example"
version = "0.1.0"
description = "Python MCP SDK Example - A Model Context Protocol server for web content fetching"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "langgpt" }]
maintainers = [{ name = "langgpt" }]
keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx<0.28",
    "markdownify>=0.13.1",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
    "readabilipy>=0.2.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-fetch-example = "mcp_fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fetch"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
